--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Vite + React</title>
+    <title>Ebags</title>
   </head>
   <body>
     <div id="root"></div>
